# Fetchix

./: Fetchix.flatpak  LICENSE  README.md  fetchix  fetchix.vala  install.sh  meson.build
Flatpak/: Fetchix.flatpak  fetchix.flatpak.vala  io.github.IzsakiRobi.Fetchix.yml  meson.build
Send to Fetchix Addon/: background.js  manifest.json
